# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.265 2010/12/24 08:58:40 ssuominen Exp $

  24 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  nvidia-drivers-96.43.19.ebuild, nvidia-drivers-260.19.29.ebuild:
  amd64 stable wrt #348186

  23 Dec 2010; Richard Freeman <rich0@gentoo.org>
  nvidia-drivers-173.14.28.ebuild:
  amd64 stable - 348186

*nvidia-drivers-260.19.29 (14 Dec 2010)

  14 Dec 2010; Jeroen Roovers <jer@gentoo.org>
  +nvidia-drivers-260.19.29.ebuild:
  Version bump (bug #347371).

*nvidia-drivers-173.14.28 (06 Dec 2010)

  06 Dec 2010; Jeroen Roovers <jer@gentoo.org>
  +nvidia-drivers-173.14.28.ebuild:
  Version bump by radfoj (bug #342361).

*nvidia-drivers-260.19.26 (01 Dec 2010)

  01 Dec 2010; Michał Januszewski <spock@gentoo.org>
  +nvidia-drivers-260.19.26.ebuild:
  Version bump. This is a beta version (and thus masked), but it is also the
  first 260.x release that works with GF330M.

  20 Nov 2010; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-96.43.19.ebuild:
  Free xorg-server dependency (bug #345929).

*nvidia-drivers-96.43.19 (19 Nov 2010)

  19 Nov 2010; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-96.43.19.ebuild:
  Version bump by Miguel R. Caudevilla (bug #345929).

*nvidia-drivers-260.19.21 (18 Nov 2010)

  18 Nov 2010; Doug Goldstein <cardoe@gentoo.org>
  -nvidia-drivers-260.19.06.ebuild, -nvidia-drivers-260.19.12.ebuild,
  +nvidia-drivers-260.19.21.ebuild:
  Bump to the latest official release. Remove beta releases.

*nvidia-drivers-260.19.12 (15 Oct 2010)

  15 Oct 2010; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-drivers-260.19.12.ebuild:
  Version bump for new upstream release. Added a note about what USE=gtk
  does when you disable it.

  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  nvidia-drivers-96.43.18.ebuild, nvidia-drivers-173.14.27.ebuild,