@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 09nvidia 61 RMD160 b69c3282ba6195112e312fe34bdcb12544aef8ca SHA1 05dd043f66f53409dfe511636d92a339edb4c765 SHA256 14702d6726cc9f0ad832a3cc90059999eb956f9e3a35397cb63cfa6347b33e39
 AUX 195.30-unified-arch.patch 1525 RMD160 9872c270b4bb3d3010af3f2b83798631562c8d8f SHA1 06330376e9a25e3317a4bfe12f74af17e56f3448 SHA256 b6224e213820c698315a8645204d992b779f31e8c45c025e740bc189dc1f9bae
 AUX 256.35-unified-arch.patch 1498 RMD160 63285585705b880f4e745e1f6ffad493ea876d05 SHA1 a2537442b2d896cd8b6e8897b345fee3bfcf5222 SHA256 7861431595e425c5df8acffb8bf536befa7a13618d6f66456aef6dac4db5c314
@@ -58,7 +61,7 @@ DIST NVIDIA-Linux-x86_64-96.43.18-pkg2.run 12338886 RMD160 38cf91827e3011a35b00c
 DIST NVIDIA-Linux-x86_64-96.43.19-pkg2.run 13829870 RMD160 c9b2edd825d30f8deea101d5dfd51f86dbf09ffe SHA1 f3cdb5d95c5bb9057d09331395e72fe8d5006f17 SHA256 81939f9ee45255cc137719a10b8947bc90cf5697da9e27991cee5a7061d5de19
 EBUILD nvidia-drivers-173.14.25.ebuild 15359 RMD160 f76b8045fb57d3e39a8c880e0ec7b11a1c395838 SHA1 64b341c198d796892f5216efee84c142d48ee701 SHA256 247b753c685d09f124408ec687d1d9e5a492d87c3cd72ef42e7df409c1e3c114
 EBUILD nvidia-drivers-173.14.27.ebuild 15389 RMD160 f482d1c91a23e197b97e8e48d0f53c880d4a3ca2 SHA1 26962c789ebea9fca1bad121b00626a40dec2710 SHA256 075db31110eba30d9fe791e17640023d33c2f8ee92559d3497292d7b21d6278f
-EBUILD nvidia-drivers-173.14.28.ebuild 15382 RMD160 36872aceb9516ddf8e3dc5190e36cf54390fbbbb SHA1 87a4dbcd1298427170a30e8c2f654025473e324a SHA256 1d3171a203f1b2b2c326abcfe961765aa986a5806e3f5a3f53b51af1533db75f
+EBUILD nvidia-drivers-173.14.28.ebuild 15381 RMD160 6decc4a0a4c8a5394eef3b52a7316c3a2b54ad8b SHA1 ee3d0cb3e726a5b69601155e5dfa2054c7c2c6db SHA256 a97c3a0889ae8c28f59ed30101308657e9c93f57c3e5b95cc760859f927eca11
 EBUILD nvidia-drivers-190.53-r1.ebuild 15484 RMD160 9677efa6e2a0da095293798813baa67544c7de88 SHA1 da524d214695935095d6bfad67da1344cc152218 SHA256 66a541fdc9f837c9e5969e472eb5493324fe27affa7706c2a65f63ca14944832
 EBUILD nvidia-drivers-195.36.24.ebuild 16151 RMD160 f24b7c3606aa81d831b3b856f00c9e60039f2c9a SHA1 d26b0b23267b5308b2226a68ef649616d1d9656a SHA256 ba473f7ace82ed993193f93eb63f7de4ca34f6b96826831fbb0b933b4240b71a
 EBUILD nvidia-drivers-195.36.31.ebuild 16167 RMD160 a69f15f581e37467b5f7de42041e9fad41cb3957 SHA1 a5cbaa055c850fd3060608d50f2accbcbdfe6de6 SHA256 575d79f8627cb12f97c2bc591277c10d66501b66fc1bae9adb18b2142c5aa821
@@ -68,9 +71,16 @@ EBUILD nvidia-drivers-256.52.ebuild 15724 RMD160 6262dd3224a772ec67da23af1edaf33
 EBUILD nvidia-drivers-256.53.ebuild 15724 RMD160 9d78ef0f6d2fa49bc29d798ac9b73968c15cee5f SHA1 16bde3b5b24f0ae22f8fa070b2dd6bd3f8d82ba3 SHA256 3890cf50cfce4fd7316eb07a9a306157b527f266dc815662d06ee0aa2584d312
 EBUILD nvidia-drivers-260.19.21.ebuild 16188 RMD160 3a4adaaf4b15f5ae845fa62050861408000741bf SHA1 854f91585d862fc7db7cc66d96d179671140acf8 SHA256 67eed5f6bed420ef0f6665cc87ffbf76ba9d7846beb56b3c48d20b0b19f87765
 EBUILD nvidia-drivers-260.19.26.ebuild 16187 RMD160 f4174dfa13e976dcb6eb442bed5929c32351e509 SHA1 87a876bbb9830c5c24233ca38ef65b5ec956bb87 SHA256 fcee0480f1f689309aab40f125eb77e773c6791a72cb27860682a78ac675cb5f
-EBUILD nvidia-drivers-260.19.29.ebuild 16202 RMD160 1010edaa0b3735fc52cba5d6bf82604df0795a41 SHA1 8c12c17a7e2bd17a0c454fe2358ba45804e6683d SHA256 2037f4b4a9365939f5ff593f4c4c14f5a339c9a039fb3cd72b70302c54232069
+EBUILD nvidia-drivers-260.19.29.ebuild 16197 RMD160 54aa628e171b4287c7d08a76c57452de859c5cc9 SHA1 e00711fdf8260374e8be1fce6e1a83a995e1330d SHA256 a948acb04f89b8780d62fa13230710846e8a77afb939156553029ea910fe2770
 EBUILD nvidia-drivers-96.43.16.ebuild 15375 RMD160 7f5c11269019caa7a32416a1762404487a17b76a SHA1 a78162fc120650cde3fe7078a481c24bad50df4f SHA256 9260a5e3421b9b9f7a704531bb965d7bd317e552fc3a35140faf3838ae78621e
 EBUILD nvidia-drivers-96.43.18.ebuild 15371 RMD160 157df03ce0e958ac9f06aa602a762a5da23b4468 SHA1 677b245bbf68381db0ea3b03f03db2aa83bcc7c0 SHA256 7191c8ed7f3aa4682d312c7ad1973e9df94a195fada91340fc8e3450b416838a
-EBUILD nvidia-drivers-96.43.19.ebuild 15368 RMD160 59facffbcfaec7cb3e2a85e027e0af5418d8b29d SHA1 21f3d5a8ff5a1c11031807d947deff8a99c3922c SHA256 a3df7e394d96160800decea6ab1c3cf8a44296451cc1d5a64d161bfbe47a1215
-MISC ChangeLog 57371 RMD160 232c3a3f1966403bc01d83bc1195c947da2c5a7d SHA1 32096fdaa3f750bf1a912668aa67f1281f351b9f SHA256 4fbe17702cdb3ccd401c7efce35a7e8902abe27f131a6b25a38737c5d43ec057
+EBUILD nvidia-drivers-96.43.19.ebuild 15363 RMD160 5dba1acc31669bead70a48ff985b1ac6464bb279 SHA1 79db9caa4cab0d39f054e9432b93420f2e55c407 SHA256 dcd00862dea4287bbaaa461fc2b92993aba94b4da58c85dc7bad67c1f5d98395
+MISC ChangeLog 57550 RMD160 4f4412b01c3a988672582545f7dc29f62c5654bf SHA1 883e0c78674c8e4f88ba70069fa25fe054e4bf6c SHA256 0b36499408ffdb3370ac9a5820e49ebcdacea3da40e79f638ad980f36c7b6e2e
 MISC metadata.xml 549 RMD160 b6f8cfd5fe9668f4031b43d2167ba4712b3cb508 SHA1 c48be9c87aa8b237fa09848a53625f8312fa2056 SHA256 22653e2d8ee95e57ce47b6292a9988feecada431dde56c2c97198efd6f4b9354
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk0WSNoACgkQNQqtfCuFneP+hwCdGsSQkAx1dT0yapf+PUIQDkIH
+XWwAn2JhrZfTY7pbYU+m21QVbPygtbxB
+=lxWr
+-----END PGP SIGNATURE-----
