@@ -1,6 +1,11 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.265 2010/12/24 08:58:40 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.266 2010/12/25 19:38:12 fauli Exp $
+
+  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
+  nvidia-drivers-96.43.19.ebuild, nvidia-drivers-173.14.28.ebuild,
+  nvidia-drivers-260.19.29.ebuild:
+  stable x86, bug 348186
 
   24 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
   nvidia-drivers-96.43.19.ebuild, nvidia-drivers-260.19.29.ebuild:
